<resources>
    <string name="app_name">telhaimarket</string>
    <string name="title_activity_login">Login</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_new_post">NewPost</string>
    <string name="back">back</string>
    <string name="back_button">back button</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="confirm_enter_password">Confirm password</string>
    <string name="enter_password">Enter Password</string>
    <string name="edit_password">Edit Password</string>
    <string name="edit_phone_number">Edit phone number</string>
    <string name="edit_Full_name">Edit full name</string>
    <string name="enter_cell_phone_number">Enter Cell Phone Number</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_e_mail">Enter e-mail:</string>
    <string name="enter_e_mail_text">Enter e-mail</string>
    <string name="enter_new_post_title">Enter Post Title</string>
    <string name="enter_description">Enter Post Description</string>
    <string name="enter_price">Enter Price</string>
    <string name="publish">publish</string>

    <string name="title_activity_profile_page">profile_page</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="welcome"> </string>
    <string name="edit_profile">edit profile</string>
    <string name="create_post">create post</string>
    <string name="my_posts">my posts</string>
    <string name="log_out">log out</string>
    <string name="Edit_btn">edit</string>
    <string name="title_activity_edit_post">Edit</string>
    <string name="update_information">update information</string>
    <string name="reset_password">reset password</string>


    <string name="send_reset_email">Send reset e-mail</string>
    <string name="search">search</string>


</resources>