<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:theme="@style/ThemeOverlay.Telhaimarket.FullscreenContainer"
    tools:context=".Login">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/welcomeMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="25"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:layout_marginTop="-95dp"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/login_page_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="20"
            android:layout_marginTop="-40dp"
            android:text="@string/login"
            android:backgroundTint="@color/black"
            android:textAlignment="center"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/register_page_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="20"
            android:layout_marginTop="15dp"
            android:text="@string/register"
            android:backgroundTint="@color/black"
            android:textAlignment="center"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/edit_profile_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="20"
            android:layout_marginTop="70dp"
            android:text="@string/edit_profile"
            android:backgroundTint="@color/black"
            android:textAlignment="center"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/create_post_page_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="20"
            android:layout_marginTop="125dp"
            android:text="@string/create_post"
            android:backgroundTint="@color/black"
            android:textAlignment="center"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/my_posts_page_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="20"
            android:layout_marginTop="180dp"
            android:text="@string/my_posts"
            android:backgroundTint="@color/black"
            android:textAlignment="center"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/log_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="20"
            android:layout_marginTop="235dp"
            android:text="@string/log_out"
            android:backgroundTint="@color/black"
            android:textAlignment="center"
            android:layout_gravity="center" />

        <ImageView
            android:id="@+id/login_image_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-340dp"
            android:ems="20"
            app:srcCompat="@drawable/fields" />

    </FrameLayout>
</FrameLayout>