<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:theme="@style/ThemeOverlay.Telhaimarket.FullscreenContainer"
    tools:context=".Login">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="25"
            android:text="@string/enter_e_mail_text"
            android:textAlignment="center"
            android:layout_marginTop="-35dp"
            android:layout_gravity="center" />

        <EditText
            android:id="@+id/editTextTextEmailAddress3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="20"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:text="@string/enter_e_mail"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="25"
            android:text="@string/enter_password"
            android:textAlignment="center"
            android:layout_marginTop="45dp"
            android:layout_gravity="center" />

        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="75dp"
            android:ems="20"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:text="@string/enter_password"
            android:textAlignment="center" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="20"
            android:layout_marginTop="135dp"
            android:text="@string/login"
            android:backgroundTint="@color/black"
            android:textAlignment="center"
            android:layout_gravity="center" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-320dp"
            android:ems="20"
            app:srcCompat="@drawable/traditional_market" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:contentDescription="@string/back_button"
            app:srcCompat="?attr/actionModeCloseDrawable" />

    </FrameLayout>
</FrameLayout>