<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:theme="@style/ThemeOverlay.Telhaimarket.FullscreenContainer"
    tools:context=".Register">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/email_register_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="25"
            android:text="@string/enter_e_mail_text"
            android:textAlignment="center"
            android:layout_marginTop="-75dp"
            android:layout_gravity="center" />

        <EditText
            android:id="@+id/email_register_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="20"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:layout_marginTop="-40dp"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/password_register_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="25"
            android:text="@string/enter_password"
            android:textAlignment="center"
            android:layout_marginTop="-5dp"
            android:layout_gravity="center" />

        <EditText
            android:id="@+id/password_register_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:ems="20"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/re_password_register_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="25"
            android:text="@string/confirm_enter_password"
            android:textAlignment="center"
            android:layout_marginTop="75dp"
            android:layout_gravity="center" />

        <EditText
            android:id="@+id/re_password_register_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="110dp"
            android:ems="20"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/PhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="25"
            android:text="@string/enter_cell_phone_number"
            android:textAlignment="center"
            android:layout_marginTop="145dp"
            android:layout_gravity="center" />

        <EditText
            android:id="@+id/PhoneNumber_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="190dp"
            android:ems="20"
            android:inputType="phone"
            android:minHeight="48dp"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/FullName_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="25"
            android:text="@string/enter_full_name"
            android:textAlignment="center"
            android:layout_marginTop="225dp"
            android:layout_gravity="center" />

        <EditText
            android:id="@+id/editFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="265dp"
            android:ems="20"
            android:inputType="textPhonetic"
            android:minHeight="48dp"
            android:textAlignment="center" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="20"
            android:layout_marginTop="310dp"
            android:text="@string/register"
            android:backgroundTint="@color/black"
            android:textAlignment="center"
            android:layout_gravity="center" />

        <ImageView
            android:id="@+id/register_image_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-350dp"
            android:ems="20"
            app:srcCompat="@drawable/peasant_tools" />

    </FrameLayout>
</FrameLayout>