<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    android:theme="@style/ThemeOverlay.Telhaimarket.FullscreenContainer"
    tools:context=".NewPost" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title_new_post_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-55dp"
            android:ems="25"
            android:text="@string/enter_new_post_title"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/title_new_post_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-20dp"
            android:ems="20"
            android:inputType="textPhonetic"
            android:minHeight="48dp"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/Dec_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:ems="25"
            android:text="@string/enter_description"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editDec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_marginTop="425dp"
            android:ems="20"
            android:maxLines="5"
            android:maxLength="220"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:textAlignment="textStart" />

        <Button
            android:id="@+id/new_post_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="310dp"
            android:backgroundTint="@color/black"
            android:ems="20"
            android:text="@string/register"
            android:textAlignment="center" />

        <ImageView
            android:id="@+id/new_post_image_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-300dp"
            android:ems="20"
            app:srcCompat="@drawable/cultivating" />

        <EditText
            android:id="@+id/price_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="20"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:inputType="number" />

        <TextView
            android:id="@+id/price_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:ems="25"
            android:text="@string/enter_price"
            android:textAlignment="center" />

    </FrameLayout>
</FrameLayout>