<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    android:theme="@style/ThemeOverlay.Telhaimarket.FullscreenContainer"
    tools:context=".ProfileEditPage" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="89dp"
        tools:layout_editor_absoluteY="134dp">

        <EditText
            android:id="@+id/editFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:ems="20"
            android:inputType="textPhonetic"
            android:minHeight="48dp"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/PhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="75dp"
            android:ems="25"
            android:text="@string/edit_phone_number"
            android:textAlignment="center" />


        <EditText
            android:id="@+id/PhoneNumber_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="115dp"
            android:ems="20"
            android:inputType="phone"
            android:minHeight="48dp"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/password_Edit_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="160dp"
            android:ems="25"
            android:text="@string/edit_password"
            android:textAlignment="center" />
\

        <EditText
            android:id="@+id/password_edit_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="200dp"
            android:ems="20"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/re_password_edit_con_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="240dp"
            android:ems="25"
            android:text="@string/confirm_enter_password"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/re_password__edit_con_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="265dp"
            android:ems="20"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textAlignment="center" />


        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="310dp"
            android:backgroundTint="@color/black"
            android:ems="20"
            android:text="@string/Edit_btn"
            android:textAlignment="center" />


    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>